libdballe_sources = [
        'file.cc',
        'importer.cc',
        'exporter.cc',
        'message.cc',
        'types.cc',
        'value.cc',
        'values.cc',
        'data.cc',
        'query.cc',
        'var.cc',
        'cursor.cc',
        'db.cc',
        'core/error.cc',
        'core/cursor.cc',
        'core/aliases.cc',
        'core/shortcuts.cc',
        'core/shortcuts-access.cc',
        'core/benchmark.cc',
        'core/defs.cc',
        'core/var.cc',
        'core/values.cc',
        'core/file.cc',
        'core/arrayfile.cc',
        'core/csv.cc',
        'core/data.cc',
        'core/data-access.cc',
        'core/query.cc',
        'core/query-access.cc',
        'core/structbuf.cc',
        'core/matcher.cc',
        'core/match-wreport.cc',
        'core/varmatch.cc',
        'core/json.cc',
        'core/string.cc',
        'msg/bulletin.cc',
        'msg/context.cc',
        'msg/msg.cc',
        'msg/cursor.cc',
        'msg/cursor-access.cc',
        'msg/json_codec.cc',
        'msg/wr_codec.cc',
        'msg/wr_importers/base.cc',
        'msg/wr_importers/synop.cc',
        'msg/wr_importers/ship.cc',
        'msg/wr_importers/temp.cc',
        'msg/wr_importers/metar.cc',
        'msg/wr_importers/flight.cc',
        'msg/wr_importers/generic.cc',
        'msg/wr_importers/pollution.cc',
        'msg/wr_exporters/common.cc',
        'msg/wr_exporters/synop.cc',
        'msg/wr_exporters/ship.cc',
        'msg/wr_exporters/buoy.cc',
        'msg/wr_exporters/metar.cc',
        'msg/wr_exporters/temp.cc',
        'msg/wr_exporters/flight.cc',
        'msg/wr_exporters/generic.cc',
        'msg/wr_exporters/pollution.cc',
        'sql/sql.cc',
        'sql/querybuf.cc',
        'sql/sqlite.cc',
        'db/db.cc',
        'db/v7/utils.cc',
        'db/v7/trace.cc',
        'db/v7/transaction.cc',
        'db/v7/batch.cc',
        'db/v7/cache.cc',
        'db/v7/repinfo.cc',
        'db/v7/station.cc',
        'db/v7/levtr.cc',
        'db/v7/data.cc',
        'db/v7/driver.cc',
        'db/v7/sqlite/repinfo.cc',
        'db/v7/sqlite/station.cc',
        'db/v7/sqlite/levtr.cc',
        'db/v7/sqlite/data.cc',
        'db/v7/sqlite/driver.cc',
        'db/v7/db.cc',
        'db/v7/cursor.cc',
        'db/v7/cursor-access.cc',
        'db/v7/qbuilder.cc',
        'db/v7/import.cc',
        'db/v7/export.cc',
        'db/summary.cc',
        'db/summary_utils.cc',
        'db/summary_memory.cc',
        'db/summary-access.cc',
        'db/explorer.cc',
        'cmdline/cmdline.cc',
        'cmdline/processor.cc',
        'cmdline/conversion.cc',
        'cmdline/dbadb.cc',
        'fortran/api.cc',
        'fortran/traced.cc',
        'fortran/commonapi.cc',
        'fortran/commonapi-access.cc',
        'fortran/msgapi.cc',
        'fortran/dbapi.cc',
]

if libpq_dep.found()
        libdballe_sources += [
                'sql/postgresql.cc',
                'db/v7/postgresql/repinfo.cc',
                'db/v7/postgresql/station.cc',
                'db/v7/postgresql/levtr.cc',
                'db/v7/postgresql/data.cc',
                'db/v7/postgresql/driver.cc',
        ]
endif

if mariadb_dep.found()
        libdballe_sources += [
                'sql/mysql.cc',
                'db/v7/mysql/repinfo.cc',
                'db/v7/mysql/station.cc',
                'db/v7/mysql/levtr.cc',
                'db/v7/mysql/data.cc',
                'db/v7/mysql/driver.cc',
        ]
endif

if xapian_dep.found()
        libdballe_sources += [
                'db/summary_xapian.cc',
        ]
endif


libdballe = both_libraries('dballe',
        libdballe_sources,
        install: true,
        include_directories: toplevel_inc,
        cpp_args: '-DTABLE_DIR="."',
        dependencies: [
                libwreport_dep,
                sqlite3_dep,
                libpq_dep,
                mariadb_dep,
                xapian_dep,
                popt_dep,
        ])

#
# Unit testing
#

test_dballe_sources = [
        'tests-main.cc',
        'core/tests.cc',
        'core/shortcuts-test.cc',
        'file-test.cc',
        'importer-test.cc',
        'exporter-test.cc',
        'message-test.cc',
        'types-test.cc',
        'value-test.cc',
        'values-test.cc',
        'data-test.cc',
        'query-test.cc',
        'var-test.cc',
        'cursor-test.cc',
        'db-test.cc',
        'core/cursor-test.cc',
        'core/aliases-test.cc',
        'core/defs-test.cc',
        'core/var-test.cc',
        'core/values-test.cc',
        'core/file-test.cc',
        'core/data-test.cc',
        'core/query-test.cc',
        'core/structbuf-test.cc',
        'core/csv-test.cc',
        'core/matcher-test.cc',
        'core/match-wreport-test.cc',
        'core/smallset-test.cc',
        'core/varmatch-test.cc',
        'core/json-test.cc',
        'core/string-test.cc',
        'msg/tests.cc',
        'msg/bulletin-test.cc',
        'msg/context-test.cc',
        'msg/msg-test.cc',
        'msg/cursor-test.cc',
        'msg/json_codec-test.cc',
        'msg/wr_codec_generic-test.cc',
        'msg/wr_codec-test.cc',
        'msg/wr_import-test.cc',
        'msg/wr_export-test.cc',
        'sql/querybuf-test.cc',
        'sql/sqlite-test.cc',
        'db/tests.cc',
        'db/v7/utils-test.cc',
        'db/v7/trace-test.cc',
        'db/v7/batch-test.cc',
        'db/v7/cache-test.cc',
        'db/v7/repinfo-test.cc',
        'db/v7/station-test.cc',
        'db/v7/levtr-test.cc',
        'db/v7/data-test.cc',
        'db/db-test.cc',
        'db/db-basic-test.cc',
        'db/db-misc-test.cc',
        'db/db-query-station-test.cc',
        'db/db-query-data-test.cc',
        'db/db-query-summary-test.cc',
        'db/db-import-test.cc',
        'db/db-export-test.cc',
        'db/summary-test.cc',
        'db/explorer-test.cc',
        'fortran/traced-test.cc',
        'fortran/commonapi-test.cc',
        'fortran/msgapi-test.cc',
        'fortran/dbapi-test.cc',
        'cmdline/processor-test.cc',
        'cmdline/dbadb-test.cc',
]

if libpq_dep.found()
        test_dballe_sources += [
                'sql/postgresql-test.cc',
        ]
endif

if mariadb_dep.found()
        test_dballe_sources += [
                'sql/mysql-test.cc',
        ]
endif

if xapian_dep.found()
        libdballe_sources += [
                'db/summary_xapian.cc',
        ]
endif

test_dballe = executable('test-dballe', test_dballe_sources,
        include_directories: toplevel_inc,
        link_with: [
                libdballe,
        ],
        dependencies: [
                libwreport_dep,
                sqlite3_dep,
                libpq_dep,
                mariadb_dep,
                xapian_dep,
                popt_dep,
        ])

test('dballe', test_dballe)
